fix: fix visual alignment

--- a/src/components/AccordionItem/styles.module.scss
+++ b/src/components/AccordionItem/styles.module.scss
@@ -82,7 +82,7 @@
 
   @include bp('lg') {
     position: absolute;
-    right: -3.875rem;
+    right: -4.25rem;
     bottom: -2rem;
     display: block;
     opacity: 0;
